RESOLVED FIXED114818
Forced subtitles never rendered
https://bugs.webkit.org/show_bug.cgi?id=114818
Summary Forced subtitles never rendered
Eric Carlson
Reported 2013-04-18 09:16:36 PDT
Although forced subtitle tracks are enabled correctly when appropriate, forced cues are never rendered.
Attachments
Proposed patch (3.70 KB, patch)
2013-04-18 09:20 PDT, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2013-04-18 09:16:50 PDT
Eric Carlson
Comment 2 2013-04-18 09:20:01 PDT
Created attachment 198744 [details] Proposed patch
Eric Carlson
Comment 3 2013-04-18 11:02:36 PDT
Note You need to log in before you can comment on or make changes to this bug.