Forced subtitles never rendered https://bugs.webkit.org/show_bug.cgi?id=114818

Source/WebCore:

Reviewed by Jer Noble.

No new tests, media/track/track-forced-subtitles-in-band.html was updated to test this change.

* html/track/TextTrack.cpp:
(WebCore::TextTrack::isRendered): "forced" tracks are rendered.

LayoutTests:

Update test to check that a forced cue is rendered.

Reviewed by Jer Noble.

* media/track/track-forced-subtitles-in-band-expected.txt:
* media/track/track-forced-subtitles-in-band.html:


Canonical link: https://commits.webkit.org/133209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148688 268f45cc-cd09-0410-ab3c-d52691b4dbfc